--- a/src/app/features/sports/components/detail/sport-detail.component.html
+++ b/src/app/features/sports/components/detail/sport-detail.component.html
@@ -261,21 +261,18 @@
         </div>
 
         <div class="sport-detail__sort-controls">
-          @for (sortBy of playersSortByList; track sortBy) {
-            <button
-              type="button"
-              appearance="flat"
-              size="s"
-              tuiButton
-              class="sort-button"
-              (click)="togglePlayersSort(sortBy)">
-              {{ getPlayersSortLabel(sortBy) }}
-              <tui-icon
-                class="sort-icon"
-                [icon]="getPlayersSortIcon(sortBy)"
-                [class.active]="playersSortBy() === sortBy" />
-            </button>
-          }
+          <button
+            type="button"
+            appearance="flat"
+            size="s"
+            tuiButton
+            class="sort-button"
+            (click)="togglePlayersSort()">
+            Sort by Name
+            <tui-icon
+              class="sort-icon"
+              [icon]="playersSortOrder() === 'asc' ? '@tui.chevron-up' : '@tui.chevron-down'" />
+          </button>
         </div>
 
         @if (playersLoading()) {
